fix: #体力 Tl模板 one_box 加 overflow:hidden 防止获取时间溢出遮挡原神卡片

--- a/resources/Tl/tl.css
+++ b/resources/Tl/tl.css
@@ -51,6 +51,7 @@ body {
   width: 580px;
   height: 160px;
   position: relative;
+  overflow: hidden;
 }
 
 .tx {
